Fix app height overflow

--- a/ClientApp/src/app/core/components/shell/shell.component.scss
+++ b/ClientApp/src/app/core/components/shell/shell.component.scss
@@ -2,10 +2,12 @@
   max-width: 1300px;
   margin: auto;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .router-wrapper {
   background-color: white;
-  height: 100%;
+  flex-grow: 1;
   padding: 20px;
 }
