--- a/ClientApp/src/app/features/workout-administration/components/add-edit-workout-form/add-edit-workout-form.component.scss
+++ b/ClientApp/src/app/features/workout-administration/components/add-edit-workout-form/add-edit-workout-form.component.scss
@@ -16,6 +16,6 @@
 
 .exercises-list {
   flex-wrap: wrap;
-  height: 60vh;
+  height: 45vh;
   overflow: auto;
 }
